--- a/views/ngPhotoSlider.tpl.html
+++ b/views/ngPhotoSlider.tpl.html
@@ -6,11 +6,14 @@
     </li>
   </ul>
 
+<div class="ngphotoslider-nav-buttons">
       <button ng-show="images.length>1" class="btn btn-default"
         ng-disabled="prevDisabled" ng-click="onPrevButtonClicked()">Previous</button>
 
       <button ng-show="images.length>1"
           class="btn btn-default"
           ng-disabled="nextDisabled" ng-click="onNextButtonClicked()">Next</button>
+
+</div>
 
 </div>
